Fix getting/setting v and angle values with synchronization between different views
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>